// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<Link>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</Link>
`;

exports[`2. lead one and one slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <Link>
          <div>
            <div>
              <div>
                ROYALS
              </div>
            </div>
            <h3
              aria-level="3"
              role="heading"
            >
              Prince Philip ‘could be prosecuted’ over car crash
            </h3>
            <ArticleFlags
              flags={
                Array [
                  "NEW",
                ]
              }
            />
          </div>
          <div>
            <Image
              aspectRatio={1.7777777777777777}
              uri="https://img/someImage"
            />
          </div>
        </Link>
      </div>
      <div />
      <div>
        <div>
          <Link>
            <div>
              <div>
                <div>
                  CYBER CRIME
                </div>
              </div>
              <h3
                aria-level="3"
                role="heading"
              >
                GCHQ gives girls free cyber-classes to tackle gender gap
              </h3>
              <ArticleFlags
                flags={
                  Array [
                    "UPDATED",
                  ]
                }
              />
              <div>
                <span>
                  
                  GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
                </span>
                <span>
                   
                  The intelligence
                  ...
                </span>
              </div>
            </div>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary one slice 1`] = `
<Link>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</Link>
`;

exports[`4. secondary four 1`] = `
<div>
  <div>
    <div>
      <Link
        url="/article/123"
      >
        <div>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div>
          <div>
            <div>
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
    <div />
    <div>
      <Link
        url="/article/123"
      >
        <div>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div>
          <div>
            <div>
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
  </div>
  <div>
    <div>
      <Link
        url="/article/123"
      >
        <div>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div>
          <div>
            <div>
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
    <div />
    <div>
      <Link
        url="/article/123"
      >
        <div>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div>
          <div>
            <div>
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
  </div>
</div>
`;
